--- a/time-tracker/src/Pages/styles/user.css
+++ b/time-tracker/src/Pages/styles/user.css
@@ -18,6 +18,7 @@
   width: 90vh;
   height: 90vh;
   background-color: #f9f9f9;
+  overflow: hidden;
 }
 .top-bar {
   display: flex;
@@ -30,4 +31,30 @@
 }
 .user-wrapper h1 {
   padding: 10px 0 10px 0;
+}
+
+/* .user-table {
+  width: 600px;
+  overflow-x: auto;
+} */
+/* .table-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 90vh;
+  height: 90vh;
+  background-color: #f9f9f9;
+  overflow: auto;
+} */
+
+.table-wrapper {
+  overflow: auto;
+  max-width: -webkit-fill-available;
+}
+.table-wrapper table {
+  min-width: 600px;
 }
