--- a/time-tracker/src/Pages/styles/Home.module.css
+++ b/time-tracker/src/Pages/styles/Home.module.css
@@ -59,7 +59,7 @@
   justify-content: center;
   /* align-items: center; */
   margin: 5px;
-  min-height: 75vh;
+  height: 72vh;
 }
 @media screen and (max-width: 768px) {
   .homeWrapper {
